--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
+    - Reddit: "https://www.reddit.com/"
   Author's home: "https://jonnysfuturedomain.com"
 
 ################
