--- a/_config.yml
+++ b/_config.yml
@@ -119,9 +119,9 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/marin_4k.jpg"
+navbar-img: "/assets/img/subset_trees.png"
 #footer-img: "/assets/img/bgimage.png"
-page-img: "/assets/img/marin_4k.jpg"
+#page-img: "/assets/img/marin_4k.jpg"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#0085A1"
